<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/chef_cook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/chef_cook">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView

            android:id="@+id/App_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/App_name"
            android:textAlignment="center"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/text_size">

        </TextView>

        <Button
            android:id="@+id/Btn_log_in"
            style="@style/Btn_connect_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:onClick="log_in_page"
            android:text="@string/Btn_connect" />

        <Button
            android:id="@+id/Btn_new_account"
            style="@style/Btn_connect_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:onClick="new_account_page"
            android:text="@string/Btn_new_account"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</RelativeLayout>