<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel" type="com.example.test.viewmodele.SignUpViewModel">
        </variable>
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/chef_cook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/chef_cook_2">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

    <TextView

        android:id="@+id/Tittle_connect_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/Tittle_account_page"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:background="@color/white"
        android:text="@string/Username"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/Username_text_size"


        />


    <EditText
        android:id="@+id/Username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:background="@color/white"
        android:inputType=""
        android:text="@={viewModel.email}"


        />

    <TextView
        android:id="@+id/Mot_de_passe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:text="@string/Password"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/Username_text_size"

        />

    <EditText
        android:id="@+id/Mot_de_passe_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:background="@color/white"
        android:inputType=""
        android:text="@={viewModel.Password}"

        />

    <TextView
        android:id="@+id/Confirm_mot_de_passe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:background="@color/white"
        android:text="@string/Password_confirm"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/Username_text_size"

        />

    <EditText
        android:id="@+id/Confirm_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:background="@color/white"
        android:inputType=""
        android:text="@={viewModel.confirm}"

        />

    <Button
        android:id="@+id/Creer"
        style="@style/Btn_connect_style"
        android:layout_marginTop="@dimen/Username_input_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn_create"
        android:onClick="@{() -> viewModel.signUp()}"
      />
    </LinearLayout>
</RelativeLayout>
</layout>